# Rust

./: Cargo.toml  README.md  justfile
axum/: Cargo.toml
jsonwebtoken/: .env  .gitignore  Cargo.toml  README.md
jsonwebtoken/src/: config.rs  jwt.rs  main.rs
rust-musl-cross/: Cargo.toml  Dockerfile  compose.yaml
rust-musl-cross/src/: main.rs
sqlx/: .gitignore  Cargo.toml  README.md  compose.yaml
tracing/: Cargo.toml  README.md
tracing/src/: main.rs
tracing/src/core/: mod.rs  tracing.rs
