[package]
name = "rust-jsonwebtoken"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "9.3.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
ulid = { version = "1.2.1", features = ["serde"] }
thiserror = "2.0.16"
